# LiveNews_AI_Assistant

./: .env  .env.example  .gitignore  GEMINI_MIGRATION_GUIDE.md  MODEL_COMPARISON.md  RAG_EXPLANATION.md  README.md  app.py  complete_news_rag_system.py  demo_script.py  enhanced_flask_app.py  enhanced_news_rag_system.py  enhanced_summarizer.py  flask_news_app.py  idea.md  nemotron_news_rag.py  new plan.md  news_comparison_tool.py  news_freshness_validator.py  pathway_rag_enhanced.py  pathway_rag_system.py  pyproject.toml  real_time_news_collector.py  requirements.txt  requirements_flask.txt  streamlit_app.py  system_workflow_diagram.md  test_gemini_connection.py  test_migration.py  workflow_diagram_prompt.md
livenews-nextjs/: package-lock.json  package.json
livenews-nextjs/src/app/: globals.css  layout.tsx  page.tsx
livenews-nextjs/src/app/api/ai/brief/: route.ts
livenews-nextjs/src/app/api/auth/login/: route.ts
livenews-nextjs/src/app/api/auth/signup/: route.ts
livenews-nextjs/src/app/api/location/ip/: route.ts
livenews-nextjs/src/app/api/location/reverse/: route.ts
livenews-nextjs/src/app/api/news/: route.ts
livenews-nextjs/src/app/api/rag/query/: route.ts
livenews-nextjs/src/app/api/user/preferences/: route.ts
livenews-nextjs/src/components/: AIBriefPanel.tsx  AuthModal.tsx  Header.tsx  LocationSelector.tsx  NewsFeed.tsx  RAGChat.tsx  ShareModal.tsx  TagFilter.tsx
livenews-nextjs/src/components/providers/: AuthProvider.tsx  LocationProvider.tsx
livenews-nextjs/src/components/ui/: toaster.tsx
src/: __init__.py  comparison_tool.py  enhanced_news_intelligence.py  freshness_validator.py  gemini_client.py  rag_system.py  summarizer.py
static/: script.js
templates/: article_detail.html  enhanced_main.html  index.html  login.html  main.html  news_index.html  signup.html
velicham-react/: index.html  package-lock.json  package.json
