[project]
name = "livenews-ai-assistant"
version = "0.1.0"
description = "Live News AI Assistant with RAG capabilities"
authors = [
    {name = "Adithyen", email = "aadithyen1@gmail.com"},
]
dependencies = [
    "psycopg2-binary>=2.9.7",
    "streamlit>=1.28.0",
    "sentence-transformers>=2.2.2",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "flask>=3.0.3",
    # RAG backends and vector store
    "pathway>=0.26.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.4",
    "gnewsclient>=1.12",
    "newsapi-python>=0.2.7",
    "werkzeug>=3.1.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
